--- a/School_Disctrict_Analysis/PyCitySchools_Challenge.ipynb
+++ b/School_Disctrict_Analysis/PyCitySchools_Challenge.ipynb
@@ -1805,7 +1805,7 @@
     "\n",
     "eleventh_grade_reading_scores = eleventh_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]\n",
     "\n",
-    "twelfth_grade_reading_scores = twelfth_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]\n"
+    "twelfth_grade_reading_scores = twelfth_graders.groupby([\"school_name\"]).mean()[\"reading_score\"]"
    ]
   },
   {
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b1b09974",
+   "id": "70378796",
    "metadata": {},
    "outputs": [
     {
@@ -1924,17 +1924,97 @@
        "      <td>83.8</td>\n",
        "      <td>83.4</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>77.4</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>82.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>77.2</td>\n",
+       "      <td>76.7</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>76.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.9</td>\n",
+       "      <td>76.6</td>\n",
+       "      <td>76.4</td>\n",
+       "      <td>77.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>82.9</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.1</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>83.2</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.3</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.6</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    77.1  77.0  77.5  76.5\n",
-       "Cabrera High School   83.1  83.2  82.8  83.3\n",
-       "Figueroa High School  76.4  76.5  76.9  77.2\n",
-       "Ford High School      77.4  77.7  76.9  76.2\n",
-       "Griffin High School   82.0  84.2  83.8  83.4"
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     77.1  77.0  77.5  76.5\n",
+       "Cabrera High School    83.1  83.2  82.8  83.3\n",
+       "Figueroa High School   76.4  76.5  76.9  77.2\n",
+       "Ford High School       77.4  77.7  76.9  76.2\n",
+       "Griffin High School    82.0  84.2  83.8  83.4\n",
+       "Hernandez High School  77.4  77.3  77.1  77.2\n",
+       "Holden High School     83.8  83.4  85.0  82.9\n",
+       "Huang High School      77.0  75.9  76.4  77.2\n",
+       "Johnson High School    77.2  76.7  77.5  76.9\n",
+       "Pena High School       83.6  83.4  84.3  84.1\n",
+       "Rodriguez High School  76.9  76.6  76.4  77.7\n",
+       "Shelton High School    83.4  82.9  83.4  83.8\n",
+       "Thomas High School      nan  83.1  83.5  83.5\n",
+       "Wilson High School     83.1  83.7  83.2  83.0\n",
+       "Wright High School     83.3  84.0  83.8  83.6"
       ]
      },
      "execution_count": 38,
@@ -1943,14 +2023,13 @@
     }
    ],
    "source": [
-    "# Remove the index.\n",
-    "math_scores_by_grade = math_scores_by_grade[\n",
-    "                 [\"9th\", \"10th\", \"11th\", \"12th\"]]\n",
+    "#Remove the index\n",
+    "math_scores_by_grade = math_scores_by_grade[ [\"9th\", \"10th\", \"11th\", \"12th\"]]\n",
     "\n",
     "math_scores_by_grade.index.name = None\n",
     "\n",
-    "# Display the data frame\n",
-    "math_scores_by_grade.head()"
+    "#Display the data fraome\n",
+    "math_scores_by_grade.head(20)"
    ]
   },
   {
@@ -2041,17 +2120,97 @@
        "      <td>84.3</td>\n",
        "      <td>84.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.7</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.7</td>\n",
+       "      <td>83.3</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>81.5</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.8</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>81.0</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.1</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.4</td>\n",
+       "      <td>82.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.9</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>84.1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       9th  10th  11th  12th\n",
-       "Bailey High School    81.3  80.9  80.9  80.9\n",
-       "Cabrera High School   83.7  84.3  83.8  84.3\n",
-       "Figueroa High School  81.2  81.4  80.6  81.4\n",
-       "Ford High School      80.6  81.3  80.4  80.7\n",
-       "Griffin High School   83.4  83.7  84.3  84.0"
+       "                        9th  10th  11th  12th\n",
+       "Bailey High School     81.3  80.9  80.9  80.9\n",
+       "Cabrera High School    83.7  84.3  83.8  84.3\n",
+       "Figueroa High School   81.2  81.4  80.6  81.4\n",
+       "Ford High School       80.6  81.3  80.4  80.7\n",
+       "Griffin High School    83.4  83.7  84.3  84.0\n",
+       "Hernandez High School  80.9  80.7  81.4  80.9\n",
+       "Holden High School     83.7  83.3  83.8  84.7\n",
+       "Huang High School      81.3  81.5  81.4  80.3\n",
+       "Johnson High School    81.3  80.8  80.6  81.2\n",
+       "Pena High School       83.8  83.6  84.3  84.6\n",
+       "Rodriguez High School  81.0  80.6  80.9  80.4\n",
+       "Shelton High School    84.1  83.4  84.4  82.8\n",
+       "Thomas High School      nan  84.3  83.6  83.8\n",
+       "Wilson High School     83.9  84.0  83.8  84.3\n",
+       "Wright High School     83.8  83.8  84.2  84.1"
       ]
      },
      "execution_count": 40,
@@ -2064,7 +2223,7 @@
     "reading_scores_by_grade.index.name = None\n",
     "\n",
     "# Display the data frame\n",
-    "reading_scores_by_grade.head()"
+    "reading_scores_by_grade.head(40)"
    ]
   },
   {
